Fixing the horizontal padding on tablet

--- a/css/sass/layout/_pricing.scss
+++ b/css/sass/layout/_pricing.scss
@@ -213,7 +213,6 @@
     }
 
     @media only screen and (min-width: $minWidthTabletPortrait) {
-        padding: 0 3.5rem;
         .plans {
             .plans-boxes{
                 .plan-box {
@@ -259,6 +258,11 @@
                     width: var(--vertical-gradient-width);
                 }
             }
+        }
+
+        .plans, .features-comparision {
+            padding-left: 3.5rem;
+            padding-right: 3.5rem;
         }
     }
 
